bento/server/instances/25afce47-6337-4610-a6bc-7b10753b1f69.err
Traceback (most recent call last):
  File "/mnt/c/Users/kutta/OneDrive/Desktop/diss/bento/bento/server/driver.py", line 52, in <module>
    _main()
  File "/mnt/c/Users/kutta/OneDrive/Desktop/diss/bento/bento/server/driver.py", line 46, in _main
    retval= _execute(code, call)
  File "/mnt/c/Users/kutta/OneDrive/Desktop/diss/bento/bento/server/driver.py", line 26, in _execute
    byte_code= compile(code, '<inline>', 'exec')
  File "<inline>", line 14
    with open('os.path.join('./cache', "newfile.txt")', 'w') as fp:
                              ^
SyntaxError: invalid syntax
